syntax = "proto3";

option go_package = "pb/game";

message ItemTable {
	uint32 id = 1;
	uint32 max_statck_size = 2;
}

message ItemTabledData {
	repeated ItemTable data = 1;
}
